--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
         <h1>Welcome to My Homepage</h1>
         <p>This is a brief introduction about myself.</p>
         <div class="image-container">
-            <img src="path_to_your_image.jpg" alt="Description of the image">
+            <img src="https://hips.hearstapps.com/hmg-prod/images/dog-puppy-on-garden-royalty-free-image-1586966191.jpg?crop=0.752xw:1.00xh;0.175xw,0&resize=1200:*" alt="This is an image of a golden retriever">
             <div class="text-on-image">Text on top of image</div>
         </div>
-        <a href="resume.html">Check out my Resume</a>
+        <a href="dogs.html">Check out my page about dogs</a>
     </div>
 </body>
 </html>
