--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container">
         <h1>Welcome to My Homepage</h1>
-        <p>This is a brief introduction about myself.</p>
+        <p>This is a brief introduction about how this page will contain and image and another webpage.</p>
         <div class="image-container">
             <img src="https://hips.hearstapps.com/hmg-prod/images/dog-puppy-on-garden-royalty-free-image-1586966191.jpg?crop=0.752xw:1.00xh;0.175xw,0&resize=1200:*" alt="This is an image of a golden retriever">
             <div class="text-on-image">Text on top of image</div>
