--- a/dogs.html
+++ b/dogs.html
@@ -9,6 +9,9 @@
 <body>
     <div class="container">
         <h1>These are images of some dogs</h1>
+        <div class = "image-container">
+            <img src = "https://ih1.redbubble.net/image.4985927159.2969/flat,750x,075,f-pad,750x1000,f8f8f8.jpg">
+        </div>
         <p>Here is a detailed description of these dogs breeds.</p>
         <a href="index.html">Back to Home</a>
     </div>
