--- a/resume.html
+++ b/resume.html
@@ -8,9 +8,14 @@
 </head>
 <body>
     <div class="container">
-        <h1>These are images of some dogs</h1>
-        <div class = "image-container">
-            <img src = "https://ih1.redbubble.net/image.4985927159.2969/flat,750x,075,f-pad,750x1000,f8f8f8.jpg">
+        <h1>This is my fake resume</h1>
+        <object
+            type="application/pdf"
+            data="./Resume.pdf"
+            width="600"
+            height="700"
+        >
+        </object>
         </div>
         <p>Here is a detailed description of these dogs breeds.</p>
         <a href="index.html">Back to Home</a>
