--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <img src="./cool.jpg" alt="This is an image of ya boi">
             <div class="text-on-image">This is an image of me</div>
         </div>
-        <a href="dogs.html">Check out my page about dogs</a>
+        <a href="resume.html">Check out my page about dogs</a>
     </div>
 </body>
 </html>
