--- a/resume.html
+++ b/resume.html
@@ -17,7 +17,7 @@
         >
         </object>
         </div>
-        <p>Here is a detailed description of these dogs breeds.</p>
+        <p>Here is a detailed description of resume hire me!!!.</p>
         <a href="index.html">Back to Home</a>
     </div>
 </body>
